objects/adapps__OptimizerPlus_Old_Api_Version_Item__c.object
<CustomObject>
    <fields>
        <fullName>adapps__Api_Version__c</fullName>
        <label>Api Version</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Date__c</fullName>
        <label>Date</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Name__c</fullName>
        <label>Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Old_Api_Version__c</fullName>
        <label>Path</label>
        <referenceTo>adapps__OptimizerPlus_Old_Api_Version__c</referenceTo>
        <relationshipLabel>Old Api Version Items</relationshipLabel>
        <relationshipName>Old_Api_Version_Items</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>adapps__Type__c</fullName>
        <label>Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>adapps__Url__c</fullName>
        <label>Url</label>
        <type>Url</type>
    </fields>
    <label>Old Api Version Item</label>
    <nameField>
        <label>Old Api Version Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Old Api Version Items</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>